[package]
name = "job-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
shared_lib = { path = "../shared_lib" }
futures = "0.3.31"
notify-rust = "4"
